* Move the Endianness functionality to Util + ACK send function (all other sends will be a single ENet packet per frame and instant send, SendAck is for sending acks queued during receive) ** Note: Timestamp is simply a value in milliseconds, doesn't matter where it comes from (So we're using system uptime, which is what the default enet does on windows anyway)

--- a/ENetSharp/ENetSharp.csproj
+++ b/ENetSharp/ENetSharp.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Internal\Protocol\ENetProtocolSendUnsequenced.cs" />
     <Compile Include="Internal\Protocol\ENetProtocolThrottleConfigure.cs" />
     <Compile Include="Internal\Protocol\ENetProtocolVerifyConnect.cs" />
+    <Compile Include="Internal\Util.cs" />
     <Compile Include="Protocol\ENetSendType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Internal\Container\ENetChannel.cs" />
